tests/e2e/service_action_without_output.story
body = ""
http server as s
    s fetch body:body
